--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -30,12 +30,22 @@ jobs:
 
   test:
     name: Run service tests with pytest
+    strategy:
+      matrix:
+        python-version: ['3.10', '3.11', '3.12', '3.13']
     runs-on: ubuntu-22.04
-    container: python:3.10
     needs: checking
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Setup python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+
       - name: Install dependencies
         run: make develop-ci
+      
+      - name: Run tests
+        run: pytest -v ./tests
