--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -32,7 +32,7 @@ jobs:
     name: Run service tests with pytest
     strategy:
       matrix:
-        python-version: ['3.10', '3.11', '3.12', '3.13']
+        python-version: ['3.10', '3.11', '3.12']
     runs-on: ubuntu-22.04
     needs: checking
     steps:
@@ -46,6 +46,6 @@ jobs:
 
       - name: Install dependencies
         run: make develop-ci
-      
+
       - name: Run tests
         run: pytest -v ./tests
