--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ mypy = "^1.10.1"
 ruff = "^0.5.2"
 restructuredtext-lint = "^1.4.0"
 pygments = "^2.18.0"
+pytest = "^8.3.3"
 
 [build-system]
 requires = ["poetry-core"]
