--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -2,16 +2,9 @@ name: Check project in all branches
 
 on:
   workflow_call:
-  push:
-    branches-ignore:
-      - master
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
-  cancel-in-progress: true
 
 jobs:
-  checking:
+  check:
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
@@ -27,25 +20,3 @@ jobs:
 
       - name: Run CI linters
         run: make lint-ci
-
-  test:
-    name: Run service tests with pytest
-    strategy:
-      matrix:
-        python-version: ['3.10', '3.11', '3.12']
-    runs-on: ubuntu-22.04
-    needs: checking
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: make develop-ci
-
-      - name: Run tests
-        run: pytest -v ./tests
