--- a/.github/workflows/feature.yaml
+++ b/.github/workflows/feature.yaml
@@ -13,14 +13,14 @@ concurrency:
 jobs:
   check:
     name: Lint code and check format
-    uses: ./.github/workflows/check.yaml
+    uses: ./.github/workflows/_check.yaml
 
   test:
     name: Run tests
     needs: check
-    uses: ./.github/workflows/test.yaml
+    uses: ./.github/workflows/_test.yaml
 
   build:
     name: Build dists
     needs: test
-    uses: ./.github/workflows/build.yaml
+    uses: ./.github/workflows/_build.yaml
