--- a/.github/workflows/_build.yaml
+++ b/.github/workflows/_build.yaml
@@ -26,5 +26,5 @@ jobs:
       - name: Store the distribution packages
         uses: actions/upload-artifact@v4
         with:
-          name: python-package-distributions
+          name: python-package-dist
           path: dist/
