--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
     name: Publish package to PyPI and make release on Github
     needs: build
     uses: ./.github/workflows/_publish.yaml
-    if: startsWith(github.ref_name, 'refs/tags/')
+    if: startsWith(github.ref, 'refs/tags/')
     permissions:
       id-token: write
       contents: write
