--- a/.github/workflows/_publish.yaml
+++ b/.github/workflows/_publish.yaml
@@ -18,8 +18,12 @@ jobs:
         with:
           name: python-package-dist
           path: dist/
+
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          verbose: true
+          skip-existing: true
 
   github-release:
     name: >-
