--- a/.github/workflows/_publish.yaml
+++ b/.github/workflows/_publish.yaml
@@ -13,11 +13,19 @@ jobs:
     permissions:
       id-token: write
     steps:
-      - name: Download all the dists
-        uses: actions/download-artifact@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v5
         with:
-          name: python-package-dist
-          path: dist/
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: make develop-ci
+
+      - name: Build distribution
+        run: poetry build
 
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
