--- a/.github/workflows/_publish.yaml
+++ b/.github/workflows/_publish.yaml
@@ -7,11 +7,13 @@ jobs:
   publish-to-pypi:
     name: Publish Python distribution to PyPI
     runs-on: ubuntu-22.04
+    if: github.repository == 'andy-takker/base-http-client'
     environment:
       name: pypi
       url: https://pypi.org/p/base-http-client/
     permissions:
       id-token: write
+      contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
