--- a/.github/workflows/_publish.yaml
+++ b/.github/workflows/_publish.yaml
@@ -7,7 +7,7 @@ jobs:
   publish-to-pypi:
     name: Publish Python distribution to PyPI
     runs-on: ubuntu-22.04
-    if: github.repository == 'andy-takker/base-http-client'
+    # if: github.repository == 'andy-takker/base-http-client'
     environment:
       name: pypi
       url: https://pypi.org/p/base-http-client/
